Simplify configholder,filter,factory by taking away need to initialize with an appconfig.