@@ -2,9 +2,11 @@ package net.link.util.config;
 
 import static com.google.common.base.Preconditions.checkNotNull;
 
+import java.lang.reflect.InvocationTargetException;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
 
 /**
  * <h2>{@link ConfigHolder}<br> <sub>[in short] (TODO).</sub></h2>
@@ -13,29 +15,37 @@ import org.slf4j.LoggerFactory;
  *
  * @author lhunath
  */
-public class ConfigHolder<C extends Config, A extends AppConfig> {
+public class ConfigHolder<C extends Config> {
 
-    private static final Logger                          logger          = LoggerFactory.getLogger( ConfigHolder.class );
-    private static final ThreadLocal<Boolean>            holderActivated = new ThreadLocal<Boolean>() {
+    private static final Logger                       logger          = LoggerFactory.getLogger( ConfigHolder.class );
+    private static final ThreadLocal<Boolean>         holderActivated = new ThreadLocal<Boolean>() {
         @Override
         protected Boolean initialValue() {
 
             return false;
         }
     };
-    private static final ThreadLocal<ConfigHolder<?, ?>> holder          = new ThreadLocal<ConfigHolder<?, ?>>() {
+    private static final ThreadLocal<ConfigHolder<?>> holder          = new ThreadLocal<ConfigHolder<?>>() {
         @Override
-        protected ConfigHolder<?, ?> initialValue() {
+        protected ConfigHolder<?> initialValue() {
 
             if (globalConfigHolder != null)
                 return globalConfigHolder;
 
             if (globalConfigHolderType != null)
                 try {
-                    return globalConfigHolderType.newInstance();
-                } catch (InstantiationException e) {
+                    return globalConfigHolderType.getConstructor().newInstance();
+                }
+                catch (InstantiationException e) {
                     throw new RuntimeException( e );
-                } catch (IllegalAccessException e) {
+                }
+                catch (IllegalAccessException e) {
+                    throw new RuntimeException( e );
+                }
+                catch (NoSuchMethodException e) {
+                    throw new RuntimeException( e );
+                }
+                catch (InvocationTargetException e) {
                     throw new RuntimeException( e );
                 }
 
@@ -43,15 +53,16 @@ public class ConfigHolder<C extends Config, A extends AppConfig> {
         }
     };
 
-    private static Class<ConfigHolder<?, ?>> globalConfigHolderType;
-    private static ConfigHolder<?, ?>        globalConfigHolder;
+    private static Class<ConfigHolder<?>> globalConfigHolderType;
+    private static ConfigHolder<?>        globalConfigHolder;
 
-    private final Class<C>                configType;
-    private final C                       config;
-    private final DefaultConfigFactory<A> defaultConfigFactory;
+    private final Class<C>             configType;
+    private final C                    config;
+    private final DefaultConfigFactory defaultConfigFactory;
 
     /**
-     * Call this method to globally set the type that will be used to instantiate new config holders when no specific config holder has been {@link #setLocalConfigHolder(ConfigHolder)}d.
+     * Call this method to globally set the type that will be used to instantiate new config holders when no specific config holder has been
+     * {@link #setLocalConfigHolder(ConfigHolder)}d.
      *
      * You could do this in a <code>static</code> block in your config holder implementation:
      *
@@ -65,15 +76,17 @@ public class ConfigHolder<C extends Config, A extends AppConfig> {
      *
      * @param globalConfigHolderType The type to instantiate when a config holder is needed but none is available.
      */
-    protected static void setGlobalConfigHolderType(Class<ConfigHolder<?, ?>> globalConfigHolderType) {
+    protected static void setGlobalConfigHolderType(Class<ConfigHolder<?>> globalConfigHolderType) {
 
         ConfigHolder.globalConfigHolderType = globalConfigHolderType;
     }
 
     /**
-     * Call this method to globally set the config holders when no specific config holder has been {@link #setLocalConfigHolder(ConfigHolder)}d.
+     * Call this method to globally set the config holders when no specific config holder has been {@link
+     * #setLocalConfigHolder(ConfigHolder)}d.
      *
-     * It's a good idea to keep the config holder scoped to the thread.  To do that, use {@link #setGlobalConfigHolderType(Class)} instead.  The config holder set by this method has precedence to the one set by {@link #setGlobalConfigHolderType(Class)}.
+     * It's a good idea to keep the config holder scoped to the thread.  To do that, use {@link #setGlobalConfigHolderType(Class)} instead.
+     * The config holder set by this method has precedence to the one set by {@link #setGlobalConfigHolderType(Class)}.
      *
      * You could do this in a <code>static</code> block in your config holder implementation:
      *
@@ -87,18 +100,18 @@ public class ConfigHolder<C extends Config, A extends AppConfig> {
      *
      * @param globalConfigHolder The config holder to use when none is available.
      */
-    protected static void setGlobalConfigHolder(ConfigHolder<?, ?> globalConfigHolder) {
+    protected static void setGlobalConfigHolder(ConfigHolder<?> globalConfigHolder) {
 
         ConfigHolder.globalConfigHolder = globalConfigHolder;
     }
 
-    @SuppressWarnings( { "unchecked" })
-    public static <C extends Config, A extends AppConfig> ConfigHolder<C, A> get() {
+    @SuppressWarnings({ "unchecked" })
+    public static <C extends Config> ConfigHolder<C> get() {
 
-        return (ConfigHolder<C, A>) holder.get();
+        return (ConfigHolder<C>) holder.get();
     }
 
-    public static synchronized void setLocalConfigHolder(ConfigHolder<?, ?> instance) {
+    public static synchronized void setLocalConfigHolder(ConfigHolder<?> instance) {
 
         if (holderActivated.get())
             throw new IllegalStateException( "Tried to activate config holder: " + instance + " but one is already active: " + get() );
@@ -115,14 +128,12 @@ public class ConfigHolder<C extends Config, A extends AppConfig> {
 
     public static <C extends Config> C config() {
 
-        ConfigHolder<C, ?> configHolder = get();
-        return configHolder.getConfig();
+        return ConfigHolder.<C>get().getConfig();
     }
 
-    public static <A extends AppConfig> DefaultConfigFactory<A> factory() {
+    public static DefaultConfigFactory factory() {
 
-        ConfigHolder<?, A> configHolder = get();
-        return configHolder.getFactory();
+        return get().getFactory();
     }
 
     /**
@@ -133,7 +144,7 @@ public class ConfigHolder<C extends Config, A extends AppConfig> {
      */
     public ConfigHolder(final Class<C> configType) {
 
-        this( new DefaultConfigFactory<A>(), configType, null );
+        this( new DefaultConfigFactory(), configType, null );
     }
 
     /**
@@ -143,7 +154,7 @@ public class ConfigHolder<C extends Config, A extends AppConfig> {
      */
     public ConfigHolder(@NotNull C customConfig) {
 
-        this( new DefaultConfigFactory<A>(), null, customConfig );
+        this( new DefaultConfigFactory(), null, customConfig );
     }
 
     /**
@@ -151,11 +162,12 @@ public class ConfigHolder<C extends Config, A extends AppConfig> {
      *
      * @param defaultConfigFactory The factory that creates default implementations of config classes.
      * @param configType           The type of configuration that this holder provides.
-     * @param config               The configuration implementation to use.  May be <code>null</code>, in which case a default implementation of configType is used as generated by defaultConfigFactory.
+     * @param config               The configuration implementation to use.  May be <code>null</code>, in which case a default
+     *                             implementation of configType is used as generated by defaultConfigFactory.
      *
      * @see DefaultConfigFactory The default configuration
      */
-    protected ConfigHolder(final DefaultConfigFactory<A> defaultConfigFactory, final Class<C> configType, C config) {
+    protected ConfigHolder(final DefaultConfigFactory defaultConfigFactory, final Class<C> configType, C config) {
 
         this.defaultConfigFactory = defaultConfigFactory;
         this.configType = configType;
@@ -172,14 +184,14 @@ public class ConfigHolder<C extends Config, A extends AppConfig> {
         if (config != null)
             return defaultConfigFactory.getDefaultWrapper( config );
 
-        return defaultConfigFactory.getDefaultImplementation( checkNotNull( configType,
-                "No config implementation OR config type class set." ) );
+        return defaultConfigFactory.getDefaultImplementation(
+                checkNotNull( configType, "No config implementation OR config type class set." ) );
     }
 
     /**
      * @return The factory that this config holder uses to create default implementations of config classes.
      */
-    protected DefaultConfigFactory<A> getFactory() {
+    protected DefaultConfigFactory getFactory() {
 
         return defaultConfigFactory;
     }
